--- a/WebsiteCaNhan4/css/style.css
+++ b/WebsiteCaNhan4/css/style.css
@@ -1019,4 +1019,21 @@ h4, h4.block_title a {
   height: 2.5em;
   padding: 0.5em;
 }
-/**/
+/* Trang Nop bai*/
+.upload-drop-zone {
+  height: 200px;
+  border-width: 2px;
+  margin-bottom: 20px;
+}
+
+.upload-drop-zone {
+  color: #ccc;
+  border-style: dashed;
+  border-color: #ccc;
+  line-height: 200px;
+  text-align: center
+}
+.upload-drop-zone.drop {
+  color: #222;
+  border-color: #222;
+}
