--- a/WebsiteCaNhan4/css/style.css
+++ b/WebsiteCaNhan4/css/style.css
@@ -1,5 +1,5 @@
 .container {
-    border: 1px solid #fefefe;
+    border: 1px somain-menud #fefefe;
     background-color: #FFFFFF;
 }
 /*trang dang ky*/
@@ -393,7 +393,41 @@ header .scroll-nav {
 
 /*End header*/
 
+/*search*/
 
+.navbar-form{
+    padding:30px;
+    position: :absolute;
+    width: 350px;
+    bottom: :-80px;
+}
+
+/*user*/
+
+/*.pull-right{
+    padding:30px;
+    position: :absolute;
+    width: 350px;
+    bottom: :-80px;
+}*/
+#user{
+    padding:25px;
+    position: :absolute;
+    width: 200px;   
+    bottom: :-80px;
+}
+/*thongbao*/
+#thongbao{
+    padding:5px;
+/*    position: :absolute;*/
+  /*  width: 40px;*/
+    /*margin: 10px;*/
+   color: red;   
+    /*bottom: :-30px;*/
+    margin-top: 30px;
+
+
+}
 /*Navbar Search*/
 
 .nav-search {
