--- a/WebsiteCaNhan4/css/style.css
+++ b/WebsiteCaNhan4/css/style.css
@@ -546,7 +546,41 @@ margin-top: 35px;
     height: 50px;
 }
 
+/*trangthongtincanhan*/
+.user-row {
+    margin-bottom: 14px;
+}
 
+.user-row:last-child {
+    margin-bottom: 0;
+}
+
+.dropdown-user {
+    margin: 13px 0;
+    padding: 5px;
+    height: 100%;
+}
+
+.dropdown-user:hover {
+    cursor: pointer;
+}
+
+.table-user-information > tbody > tr {
+    border-top: 1px solid rgb(221, 221, 221);
+}
+
+.table-user-information > tbody > tr:first-child {
+    border-top: 0;
+}
+
+
+.table-user-information > tbody > tr > td {
+    border-top: 0;
+}
+.toppad
+{margin-top:20px;
+}
+/*ketthuctrangthongtincanhan*/
 /* Phan hop thu*/
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700);
@@ -555,7 +589,7 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-
+.othertop{margin-top:10px;}
 /*Forms setup*/
 #gui-thu .containerinbox .content-container .form-control{
   border-radius: 0;
