--- a/WebsiteCaNhan4/css/style.css
+++ b/WebsiteCaNhan4/css/style.css
@@ -601,7 +601,60 @@ body {
   border: none;
   border-bottom: 1px dotted #CFC
 }
-
+/*register*/
+.login{
+padding: 40px;
+margin-top: 50px;
+border: 5px solid rgba(0, 0, 0, 0.44);
+border-radius: 5px;
+background: rgba(0, 0, 0, 0.4);
+}
+.loginstyle{
+height: 54px;
+padding: 11px 12px;
+font-size: 16px;
+-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+width: 100%;
+}
+#register{
+position: relative;
+width: 420px;
+right: 30px;}
+.registerstyle{
+border-radius: 10px;
+height: 40px;
+padding: 11px 12px;
+font-size: 16px;
+-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+width: 100%;
+}
+.inputRegister{
+width: 180px;
+}
+::-webkit-input-placeholder {
+color: black;
+}
+:-moz-placeholder { /* Firefox 18- */
+color: black;
+}
+::-moz-placeholder {  /* Firefox 19+ */
+color: black;
+}
+:-ms-input-placeholder {
+color: black;
+}
+.btn{
+    margin-top:33px;
+    background-color: white;
+}
 
 #gui-thu .containerinbox .content-container textarea {
     border: 1px dotted #CFCFCF!important;
