--- a/WebsiteCaNhan4/css/style.css
+++ b/WebsiteCaNhan4/css/style.css
@@ -693,7 +693,11 @@ h1.content-title {
     ),
 
 }
-
+/*liên hệ*/
+.first-box{padding:10px;background:#9C0;}
+.second-box{padding:10px; background:#39F;}
+.third-box{padding:10px;background:#F66;}
+.fourth-box{padding:10px;background:#6CC;}
 
 /* Custom footer CSS
 -------------------------------------------------- */
