--- a/WebsiteCaNhan4/css/style.css
+++ b/WebsiteCaNhan4/css/style.css
@@ -25,6 +25,18 @@
     margin-right: 30px;
     padding-bottom: 30px;
 }
+/*danhsach hoc vien*/
+.custab{
+    border: 1px solid #ccc;
+    padding: 5px;
+    margin: 5% 0;
+    box-shadow: 3px 3px 2px #ccc;
+    transition: 0.5s;
+    }
+.custab:hover{
+    box-shadow: 3px 3px 0px transparent;
+    transition: 0.5s;
+    }
 
 
 
